--- a/src/app/retry/modal-xml/modal-xml.component.scss
+++ b/src/app/retry/modal-xml/modal-xml.component.scss
@@ -3,3 +3,23 @@
     background-color: #37474f;
     border-color: #263238;
 }
+
+.flex_containter{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.footer_modal{
+    align-self: flex-end;
+    display: flex;
+}
+
+.close{
+    float: right;
+    font: bold;
+    &:hover{
+        color:red;
+    }
+}
