--- a/src/app/retry/admin-retry/admin-retry.component.html
+++ b/src/app/retry/admin-retry/admin-retry.component.html
@@ -161,4 +161,6 @@
         <md-card-actions align="end">
         </md-card-actions>
     </md-card>
+
+    <app-batch-transaction [transactions]="selectedTransactions" *ngIf="selectedTransactions && selectedTransactions.length > 0"></app-batch-transaction>
 </div>
