--- a/src/app/retry/batch-transaction/batch-transaction.component.scss
+++ b/src/app/retry/batch-transaction/batch-transaction.component.scss
@@ -9,3 +9,12 @@
 	margin: 5px;
 	padding: 10px;
 }
+
+.close{
+    float: right;
+    font: bold;
+    &:hover{
+        color:red;
+        cursor: pointer;
+    }
+}
