--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
                 <span md-line
                     class="secondary">{{'app.sideNav.user.description' | translate}}</span>
             </a>-->
-           <!-- <a md-list-item
+            <!-- <a md-list-item
                 (click)="sidenav.close(); goTo('master/application')">
                 <md-icon md-list-icon
                     class="proteccion"
@@ -66,6 +66,7 @@
     </md-sidenav>
     <md-toolbar color="primary">
         <button md-icon-button
+            *ngIf="authManager.getIsLogin()"
             (click)="sidenav.toggle()">
             <md-icon>menu</md-icon>
         </button>
