--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,25 +1,33 @@
-<md-card class="example-card">
-    <md-toolbar>
-        <h2>Login form</h2>
-    </md-toolbar>
-
-    <md-card-content>
-        <div>
-            <md-input-container class="example-full-width">
+<div class="box">
+    <div class="header">
+        <div id="cont-lock"><i color="accent"
+                class="material-icons lock">lock</i></div>
+        <div id="bottom-head">
+            <h1 id="logintoregister">Login</h1></div>
+    </div>
+    <form [formGroup]="form">
+        <div class="container_Login">
+            <md-input-container color="accent">
                 <input mdInput
-                    placeholder="User Name">
+                    type="text"
+                    formControlName="userName"
+                    placeholder="{{'app.login.user' | translate}}"
+                    maxlength="50">
             </md-input-container>
-        </div>
-        <div>
-            <md-input-container class="example-full-width">
-                <input mdInput type="password"
-                    placeholder="Password">
+            <md-input-container color="accent">
+                <input mdInput
+                    type="password"
+                    formControlName="password"
+                    placeholder="{{'app.login.password' | translate}}"
+                    maxlength="50">
             </md-input-container>
+            <button md-raised-button
+                [disabled]="!form.valid"
+                (click)="login()"
+                color="primary">{{'app.login.login' | translate}}</button>
         </div>
-    </md-card-content>
-    <md-card-actions>
-        <button md-button
-            color="primary">OK</button>
-        <button md-button>CANCEL</button>
-    </md-card-actions>
-</md-card>
+    </form>
+    <div id="footer-box">
+        <!--<p class="footer-text">Not a member?<span class="sign-up"> Sign up now</span></p>-->
+    </div>
+</div>
