--- a/src/app/retry/retry-history/retry-history.component.html
+++ b/src/app/retry/retry-history/retry-history.component.html
@@ -11,76 +11,75 @@
             <form (ngSubmit)="onSubmit()"
                 [formGroup]="form">
                 <section class="">
-                <md-select placeholder="{{'app.retry.applications' | translate}}"
-                    class="item"
-                    color="accent"
-                    (change)="onSelectApplication($event.value)"
-                    [(ngModel)]="selectedApplication"
-                    formControlName="application">
-                    <md-option *ngFor="let application of applications"
-                        [value]="application.id">{{ application.name }}</md-option>
-                </md-select>
-                <md-select placeholder="{{'app.retry.services' | translate}}"
-                    class="item"
-                    color="accent"
-                    formControlName="serviceControl">
-                    <md-option *ngFor="let service of services"
-                        [value]="service.id">{{ service.name }}
-                    </md-option>
-                </md-select>
-                <md-select placeholder="{{'app.retry.consumer' | translate}}"
-                    class="item"
-                    color="accent"
-                    formControlName="consumer">
-                    <md-option *ngFor="let consumer of consumers"
-                        [value]="consumer">{{ consumer }}
-                    </md-option>
-                </md-select>
-                <md-input-container class="item"
-                    color="accent">
-                    <input mdInput
-                        type="number"
-                        placeholder="{{'app.retry.message' | translate}}"
-                        formControlName="messageId"
-                        maxlength="10">
-                </md-input-container>
+                    <md-select placeholder="{{'app.retry.applications' | translate}}"
+                        class="item"
+                        color="accent"
+                        (change)="onSelectApplication($event.value)"
+                        [(ngModel)]="selectedApplication"
+                        formControlName="application">
+                        <md-option *ngFor="let application of applications"
+                            [value]="application.id">{{ application.name }}</md-option>
+                    </md-select>
+                    <md-select placeholder="{{'app.retry.services' | translate}}"
+                        class="item"
+                        color="accent"
+                        formControlName="serviceControl">
+                        <md-option *ngFor="let service of services"
+                            [value]="service.id">{{ service.name }}
+                        </md-option>
+                    </md-select>
+                    <md-select placeholder="{{'app.retry.consumer' | translate}}"
+                        class="item"
+                        color="accent"
+                        formControlName="consumer">
+                        <md-option *ngFor="let consumer of consumers"
+                            [value]="consumer">{{ consumer }}
+                        </md-option>
+                    </md-select>
+                    <md-input-container class="item"
+                        color="accent">
+                        <input mdInput
+                            type="number"
+                            placeholder="{{'app.retry.message' | translate}}"
+                            formControlName="messageId"
+                            maxlength="10">
+                    </md-input-container>
 
+                    <md-input-container color="accent"
+                        class="date_picker">
+                        <input mdInput
+                            [mdDatepicker]="resultPickerInitial"
+                            formControlName="initialDate"
+                            [min]="minDate"
+                            [max]="maxDate"
+                            placeholder="{{'app.retry.initialDate' | translate}}">
 
-                <md-input-container color="accent"
-                    class="date_picker">
-                    <input mdInput
-                        [mdDatepicker]="resultPickerInitial"
-                        formControlName="initialDate"
-                        [min]="minDate"
-                        [max]="maxDate"
-                        placeholder="{{'app.retry.initialDate' | translate}}">
+                    </md-input-container>
+                    <button type="button"
+                        [mdDatepickerToggle]="resultPickerInitial"></button>
+                    <md-datepicker #resultPickerInitial
+                        [touchUi]="touch"
+                        [startAt]="startAt"
+                        [startView]="yearView ? 'year' : 'month'">
+                    </md-datepicker>
 
-                </md-input-container>
-                <button type="button"
-                    [mdDatepickerToggle]="resultPickerInitial"></button>
-                <md-datepicker #resultPickerInitial
-                    [touchUi]="touch"
-                    [startAt]="startAt"
-                    [startView]="yearView ? 'year' : 'month'">
-                </md-datepicker>
+                    <md-input-container color="accent"
+                        class="date_picker">
+                        <input mdInput
+                            [mdDatepicker]="resultPicker"
+                            formControlName="finalDate"
+                            [min]="minDate"
+                            [max]="maxDate"
+                            placeholder="{{'app.retry.finalDate' | translate}}">
 
-                <md-input-container color="accent"
-                    class="date_picker">
-                    <input mdInput
-                        [mdDatepicker]="resultPicker"
-                        formControlName="finalDate"
-                        [min]="minDate"
-                        [max]="maxDate"
-                        placeholder="{{'app.retry.finalDate' | translate}}">
-
-                </md-input-container>
-                <button type="button"
-                    [mdDatepickerToggle]="resultPicker"></button>
-                <md-datepicker #resultPicker
-                    [touchUi]="touch"
-                    [startAt]="startAt"
-                    [startView]="yearView ? 'year' : 'month'">
-                </md-datepicker>
+                    </md-input-container>
+                    <button type="button"
+                        [mdDatepickerToggle]="resultPicker"></button>
+                    <md-datepicker #resultPicker
+                        [touchUi]="touch"
+                        [startAt]="startAt"
+                        [startView]="yearView ? 'year' : 'month'">
+                    </md-datepicker>
                 </section>
             </form>
         </md-card-content>
@@ -96,11 +95,19 @@
             </button>
         </md-card-actions>
     </md-card>
-    <md-card class="result md_card_app" *ngIf="showTransactions" [@flyInOut]="'in'">
+    <md-card class="result md_card_app"
+        *ngIf="showTransactions"
+        [@flyInOut]="'in'">
         <md-card-content>
             <md-progress-bar mode="indeterminate"
                 color="accent"
                 *ngIf="isSearching"></md-progress-bar>
+            <div class="top_action_container"
+                *ngIf="!isSearching">
+                <button md-raised-button
+                    (click)="viewDetailService()"
+                    color="primary">{{'app.retry.viewDetailService' | translate}}</button>
+            </div>
             <p-dataTable [value]="transactions">
                 <p-header>{{'app.retry.transactions' | translate}}</p-header>
                 <p-column field="msgId"
