--- a/src/app/retry/retry-history/retry-history.component.scss
+++ b/src/app/retry/retry-history/retry-history.component.scss
@@ -49,3 +49,9 @@ md-spinner {
 .flex_container{
   padding-top: 15px;
 }
+
+.top_action_container{
+  display:flex;
+  justify-content: flex-end;
+
+}
