--- a/src/app/retry/admin-retry/admin-retry.component.html
+++ b/src/app/retry/admin-retry/admin-retry.component.html
@@ -5,7 +5,6 @@
     <md-card class="search md_card_app">
         <md-card-title>{{'app.retry.filter' | translate}}</md-card-title>
         <md-divider></md-divider>
-
         <md-card-content class="flex_container">
             <form (ngSubmit)="onSubmit()"
                 [formGroup]="form">
@@ -65,6 +64,11 @@
             <md-progress-bar mode="indeterminate"
                 color="accent"
                 *ngIf="isSearching"></md-progress-bar>
+            <div class="top_action_container" *ngIf="!isSearching">
+                <button md-raised-button
+                    (click)="viewDetailService()"
+                    color="primary">{{'app.retry.viewDetailService' | translate}}</button>
+            </div>
             <p-dataTable [value]="transactions"
                 *ngIf="!isSearching"
                 (onRowExpand)="getTransactionsTransaction($event)"
@@ -162,5 +166,7 @@
         </md-card-actions>
     </md-card>
 
-    <app-batch-transaction [transactions]="selectedTransactions" (clearTransactions)="clearTransactions()" *ngIf="selectedTransactions && selectedTransactions.length > 0"></app-batch-transaction>
+    <app-batch-transaction [transactions]="selectedTransactions"
+        (clearTransactions)="clearTransactions()"
+        *ngIf="selectedTransactions && selectedTransactions.length > 0"></app-batch-transaction>
 </div>
