--- a/src/app/retry/retry-history/retry-history.component.scss
+++ b/src/app/retry/retry-history/retry-history.component.scss
@@ -10,48 +10,47 @@ md-card {
     flex: 1;
 }
 
-.search{
-	flex: 1;
+.search {
+    flex: 1;
 }
 
-.result{
-	flex: 1;
+.result {
+    flex: 1;
 }
 
-.xml_container{
+.xml_container {}
 
+.form_container {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
 }
 
-.form_container{
-	display: flex;
-	flex-flow: column wrap;
-	justify-content: space-between;
+.item {
+    flex: 1;
+    margin: 5px;
+    padding: 10px;
 }
 
-.item{
-	flex: 1;
-	
-}
-
-.cell_grid{
-	text-align:center;
-	width:100px;
+.cell_grid {
+    text-align: center;
+    width: 100px;
 }
 
 md-spinner {
-  float:left;
-  width: 24px;
-  height: 24px;
-  margin: 5px 10px 0px 0px;
+    float: left;
+    width: 24px;
+    height: 24px;
+    margin: 5px 10px 0px 0px;
 }
 
-
-.flex_container{
-  padding-top: 15px;
+.flex_container {
+    padding-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.top_action_container{
-  display:flex;
-  justify-content: flex-end;
-
+.top_action_container {
+    display: flex;
+    justify-content: flex-end;
 }
