--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         class="side_nav">
         <md-nav-list class="demo-navigation mdl-navigation mdl-color--blue-grey-800"
             color="primary">
-            <!-- <a md-list-item
+            <a md-list-item
                 (click)="sidenav.close(); goTo('user/admin')">
                 <md-icon md-list-icon
                     class="proteccion"
@@ -12,7 +12,7 @@
                 <span md-line>{{'app.sideNav.user.title' | translate}}</span>
                 <span md-line
                     class="secondary">{{'app.sideNav.user.description' | translate}}</span>
-            </a>-->
+            </a>
             <!-- <a md-list-item
                 (click)="sidenav.close(); goTo('master/application')">
                 <md-icon md-list-icon
