--- a/src/app/retry/batch-transaction/batch-transaction.component.scss
+++ b/src/app/retry/batch-transaction/batch-transaction.component.scss
@@ -18,3 +18,15 @@
         cursor: pointer;
     }
 }
+
+.card-container {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+}
+
+md-card {
+    box-sizing: border-box;
+    margin: 12px;
+    flex: 1;
+}
